image zoom wrapper is allowing the images to overflow containers. Trying to fix

--- a/react-portfolio/src/AnimatedSection.css
+++ b/react-portfolio/src/AnimatedSection.css
@@ -31,7 +31,7 @@
 }
 
 .section-media {
-   max-width: 100%;
+   max-width: 80%;
    max-height: 100% !important;
    object-fit: contain;
 }
