--- a/react-portfolio/src/Resume.css
+++ b/react-portfolio/src/Resume.css
@@ -1,5 +1,6 @@
-.page-body {
-    
+.resume-body {
+    width: 80%;
+    margin: 0 auto;
 }
 
 .jobsection{
